tests/ui/suggestions/partialeq_suggest_swap_on_e0277.stderr
error[E0277]: can't compare `String` with `T`
  --> $DIR/partialeq_suggest_swap_on_e0277.rs:10:36
   |
LL |     String::from("Girls Band Cry") == T(String::from("Girls Band Cry"));
   |                                    ^^ no implementation for `String == T`
   |
   = help: the trait `PartialEq<T>` is not implemented for `String`
   = help: `String` implements trait `PartialEq<Rhs>`:
             PartialEq<&str>
             PartialEq<ByteStr>
             PartialEq<ByteString>
             PartialEq<Cow<'_, str>>
             PartialEq<Path>
             PartialEq<PathBuf>
             PartialEq<str>
             PartialEq
   = note: `T` implements `PartialEq<String>`
help: consider swapping the equality
   |
LL -     String::from("Girls Band Cry") == T(String::from("Girls Band Cry"));
LL +     T(String::from("Girls Band Cry")) == String::from("Girls Band Cry");
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
